# slog

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  slog.pc.in  slog_static.pc.in
include/slog/: basic_entry_writer.hpp  basic_logger.hpp  common.hpp  entry.hpp  ientry_writer.hpp  level.hpp  log_buffer.hpp  log_stream.hpp  logger.hpp  logger_manager.hpp  slog.hpp  tag.hpp  tag.inl
include/slog/detail/: append_writer_to_logstream.hpp  expand_tag.hpp  for_each_tag.hpp
src/: CMakeLists.txt  basic_entry_writer.cc  basic_logger.cc  common.cc  level.cc  log_buffer.cc  log_stream.cc  logger_manager.cc  tag.cc
tests/: CMakeLists.txt  test_slog.cc  test_tag.cc
